syntax = "proto3";

package yandex.cloud.priv.iot.broker.v1;

import "yandex/cloud/priv/operation/operation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/iot/broker/v1;broker";
option java_outer_classname = "PITBOS";

service OperationService {

  rpc Get (GetOperationRequest) returns (operation.Operation);
}

message GetOperationRequest {
  string operation_id = 1;
}
